# memorable

ZetaTest/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
ZetaTest/ZetaBinder/: build.gradle.kts  consumer-rules.pro
ZetaTest/ZetaBinder/src/main/: AndroidManifest.xml
ZetaTest/ZetaBinder/src/main/aidl/com/zetaco/core/: IBActivityThread.aidl  IEmpty.aidl
ZetaTest/ZetaBinder/src/main/aidl/com/zetaco/entity/: AppConfig.aidl  JobRecord.aidl  UnbindRecord.aidl
ZetaTest/ZetaBinder/src/main/cpp/: BoxCore.cpp  BoxCore.h  CMakeLists.txt  IO.cpp  IO.h
ZetaTest/ZetaBinder/src/main/cpp/Hook/: BaseHook.h  BinderHook.h  LinuxHook.h  MotionEventDispatcherHook.cpp  MotionEventDispatcherHook.h  RuntimeHook.h  ScompHook.cpp  ScompHook.h  SystemPropertiesHook.cpp  SystemPropertiesHook.h  UnixFileSystemHook.h  VMClassLoaderHook.h
ZetaTest/ZetaBinder/src/main/cpp/JniHook/: ArtMethod.h  JniHook.cpp  JniHook.h
ZetaTest/ZetaBinder/src/main/java/com/zetaco/: ZetaBCore.java
ZetaTest/ZetaBinder/src/main/java/com/zetaco/utils/: Slog.java  (+11 more)
ZetaTest/ZetaBinder/src/main/java/org/: Reflector.java
ZetaTest/ZetaBinder/src/main/res/values/: strings.xml
ZetaTest/app/: Zeta.jks  build.gradle.kts  proguard-rules.pro
ZetaTest/app/src/main/: AndroidManifest.xml
ZetaTest/app/src/main/java/com/container/: App.java  MainActivity.java
ZetaTest/app/src/main/res/layout/: activity_main.xml
ZetaTest/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ZetaTest/app/src/main/res/xml/: file_paths.xml
ZetaTest/gradle/wrapper/: gradle-wrapper.properties
(+353 files in other folders)
